Fix hero gaps between elements

--- a/src/components/hero/Hero.pcss
+++ b/src/components/hero/Hero.pcss
@@ -16,6 +16,17 @@
 	margin-top: auto;
 	width: 100%;
 	height: 100%;
+	gap: var(--space-xl);
+	align-items: flex-start;
+	position: relative;
+}
+
+.hero_main_content {
+	display: flex;
+	flex-direction: column;
+	margin-top: auto;
+	width: 100%;
+	height: 100%;
 	gap: var(--space-m);
 	align-items: flex-start;
 	position: relative;
